# Mecari

./: .gitignore  LICENSE  README.md  app.py  apt.txt  evaluate.py  infer.py  packages.txt  preprocess.py  pyproject.toml  requirements.txt  train.py  up_hf.py
.github/: CODEOWNERS
configs/: base.yaml  gatv2.yaml
mecari/: __init__.py
mecari/analyzers/: mecab.py
mecari/config/: config.py
mecari/data/: data_module.py
mecari/featurizers/: lexical.py
mecari/models/: __init__.py  base.py  gatv2.py
mecari/utils/: morph_utils.py  signature.py
sample_model/: config.yaml
